--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,14 @@ body {
     display: flex;
     padding: 20px;
     border-radius: 30px;
+    max-width: 100%;
     width: 800px;
     height: 550px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 
 .bg-pic img {
